load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "runtime",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/binchencoder/janus-gateway/gateway/runtime",
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway//internal/httprule",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities",
        "//gateway/internal:go_default_library",
        "//httpoptions",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_gateway_proto//frontend:go_default_library",
        "@com_github_binchencoder_letsgo//grpc:go_default_library",
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_binchencoder_skylb_api//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_pborman_uuid//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "runtime_test",
    size = "small",
    srcs = [
        "balancer_test.go",
        "context_test.go",
        "errors_test.go",
        "handler_test.go",
        "hook_test.go",
        "marshal_httpbodyproto_test.go",
        "marshaler_registry_test.go",
        "mux_test.go",
    ],
    embed = [":runtime"],
    deps = [
        "//examples/internal/proto/examplepb",
        "//gateway/internal:go_default_library",
        "//gateway/runtime/internal/examplepb",
	    "@com_github_grpc_ecosystem_grpc_gateway//utilities",
        "//httpoptions",
        "@com_github_binchencoder_letsgo//hashring:go_default_library",
        "@com_github_binchencoder_skylb_api//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":runtime",
    visibility = ["//visibility:public"],
)
