load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "error_proto",
    srcs = [
        "error.proto",
    ],
)

go_proto_library(
    name = "error_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/binchencoder/ease-gateway/proto/frontend",
    proto = ":error_proto",
)

go_library(
    name = "go_default_library",
    embed = [":error_go_proto"],
    importpath = "github.com/binchencoder/ease-gateway/proto/frontend",
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
