package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "binchencoder.com/ease-gateway/util/glog",
    deps = [
        "@com_github_binchencoder_letsgo//trace:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
