load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "binchencoder.com/ease-gateway/examples/cmd/example-grpc-server",
    deps = [
        "//examples/proto:go_default_library",
        "//examples/server:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_skylb_api//server:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "example-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
