load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "echo.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/examples/cmd/custom-grpc-server",
    deps = [
        "//proto/examples:go_default_library",
        "@com_github_binchencoder_gateway_proto//data:go_default_library",
        "@com_github_binchencoder_skylb_api//server:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)

go_binary(
    name = "grpc-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
