load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "integration_test.go",
        "main_test.go",
    ],
    deps = [
        "//examples/internal/gateway:go_default_library",
        "//examples/internal/proto/examplepb:go_default_library",
        # "//examples/internal/proto/examplepb:unannotated_go_default_library",
        "//examples/internal/server:go_default_library",
        "//gateway/runtime:go_default_library",
        "//httpoptions:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
        "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)
