load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "generator",
    srcs = ["generator.go"],
    importpath = "github.com/binchencoder/janus-gateway/gateway/internal/generator",
    deps = ["//gateway/internal/descriptor:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":generator",
    visibility = ["//:__subpackages__"],
)
