load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility =  ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "grpc_api_configuration.go",
        "grpc_api_service.go",
        "registry.go",
        "services.go",
        "types.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/gateway/protoc-gen-grpc-gateway/descriptor",
    deps = [
        "//gateway/protoc-gen-grpc-gateway/httprule:go_default_library",
        "//gateway/options:go_default_library",
        "//proto/data:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/ghodss/yaml:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/jsonpb:go_default_library_gen",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/protoc-gen-go/generator:go_default_library_gen",
        "@go_googleapis//google/api:annotations_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "grpc_api_configuration_test.go",
        "registry_test.go",
        "services_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//gateway/protoc-gen-grpc-gateway/httprule:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
