load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "generator.go",
        "template.go",
    ],
    importpath = "github.com/binchencoder/ease-gateway/gateway/protoc-gen-grpc-gateway/gengateway",
    deps = [
        "//gateway/options:go_default_library",
        "//gateway/runtime:go_default_library",
        "//gateway/protoc-gen-grpc-gateway/descriptor:go_default_library",
        "//gateway/protoc-gen-grpc-gateway/generator:go_default_library",
        "//proto/data:go_default_library",
        "//proto/frontend:go_default_library",
        "@binchencoder_letsgo//grpc:go_default_library",
        "@binchencoder_skylb_api//balancer:go_default_library",
        "@binchencoder_skylb_api//client:go_default_library",
        "@binchencoder_skylb_api//client/option:go_default_library",
        "@binchencoder_skylb_api//proto:go_default_library",
        "@binchencoder_third_party_go//vendor/google.golang.org/grpc/naming:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/glog:go_default_library", # "@com_github_golang_glog//:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library", # "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/protoc-gen-go/generator:go_default_library", # "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/protoc-gen-go/generator:go_default_library_gen",
        "@grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "generator_test.go",
        "template_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//gateway/options:go_default_library",
        "//gateway/protoc-gen-grpc-gateway/descriptor:go_default_library",
        "//gateway/protoc-gen-grpc-gateway/httprule:go_default_library",
        "@binchencoder_third_party_go//vendor/github.com/golang/protobuf/proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
